--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <header>
-      <h1>EL OSO POLAR DEL POLO SUR</h1>
+      <h1>La Cultura Japonesa</h1>
       <p>La venganza de los caidos</p>
     </header>
 
@@ -27,7 +27,7 @@
 
 
     <footer>
-      <p>EL OSO POLAR ESTABA VOLANDO POR LOS CIELOS CUANDO MIRO ASI POR DEBAJO DEL HOMBRO UN HELICOPERO CON CANTINFLAS DENTRO. FIN</p>
+      <p>Yeshua David Reyes Guzman 1ro de Secundaria</p>
     </footer>
 
 
