i change the image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <main>
-      <img id="imagenMain" src="https://previews.123rf.com/images/andreanita/andreanita1412/andreanita141200001/34919606-oso-polar-ursus-maritimus-cachorro-saliendo-den-y-jugar-parque-nacional-de-wapusk-canad%C3%A1.jpg" alt="Imagen Main">
+      <img id="imagenMain" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapers.com%2Fwallpapers%2Fleft-4-dead-2-ellis-mbr7hdux333l83ve.html&psig=AOvVaw3Lr2RAOHsX2yLoxNzxm_2g&ust=1684607376543000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCLi84NiBgv8CFQAAAAAdAAAAABAR">
     </main>
 
 
