--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <main>
-      <img id="imagenMain" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapers.com%2Fwallpapers%2Fleft-4-dead-2-ellis-mbr7hdux333l83ve.html&psig=AOvVaw3Lr2RAOHsX2yLoxNzxm_2g&ust=1684607376543000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCLi84NiBgv8CFQAAAAAdAAAAABAR">
+      <img id="imagenMain" src="">
     </main>
 
 
