--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
       <h1>La Cultura Japonesa</h1>
-      <p>La venganza de los caidos</p>
+      <p>La tierra del sol Naciente</p>
     </header>
 
 
